Dark mode fixes

--- a/assets/less/behaviors.less
+++ b/assets/less/behaviors.less
@@ -1,5 +1,5 @@
 .builder-controllers-builder-area {
-    background: white;
+    background: var(--bs-body-bg, white);
 
     ul.controller-behavior-list {
         .clearfix();
@@ -11,7 +11,7 @@
         li {
             h4 {
                 text-align: center;
-                border-bottom: 1px dotted @builder-control-border-color; 
+                border-bottom: 1px dotted @builder-control-border-color;
                 margin: 0 -20px 40px;
 
                 span {
