--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -57,7 +57,7 @@ html.gecko .control-filelist ul li.group {
 
 .builder-inspector-container {
     width: 350px;
-    border-left: 1px solid #d9d9d9;
+    border-left: 1px solid var(--bs-border-color, #d9d9d9);
 
     &:empty {
         display: none!important;
